# non_contiguously_indexed_array

./: Cargo.toml  README.md
.github/workflows/: rust.yml
non_contiguously_indexed_array/: Cargo.toml
non_contiguously_indexed_array/src/: array.rs  index.rs  iter.rs  lib.rs
non_contiguously_indexed_array/tests/: basic_tests.rs  constants.rs  invariants.rs  invariants_tests.rs  macros.rs
non_contiguously_indexed_array_builder/: Cargo.toml
non_contiguously_indexed_array_builder/src/: builder.rs
non_contiguously_indexed_array_builder/tests/: basic.rs  basic_tests.rs  constants.rs
src/: array.rs  generator.rs  lib.rs
tests/: basic_tests.rs  constants.rs  generator_tests.rs
