[workspace]
resolver = "3"

[package]
name = "non_contiguously_indexed_array"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }

[dev-dependencies]
ron = { version = "0.8" }

[features]
default = ["serde", "panic"]
panic = []
serde = ["dep:serde", "dep:serde-big-array"]
