[package]
name = "non_contiguously_indexed_array"
version = "0.3.1"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository = "https://github.com/augenfrosch/non_contiguously_indexed_array"
categories = ["data-structures"]

[lints]
workspace = true

[lib]
crate-type = ["rlib"]
