[package]
name = "non_contiguously_indexed_array_builder"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/augenfrosch/non_contiguously_indexed_array"
license = "Apache-2.0"
readme = "../README.md"
categories = ["data-structures"]

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4", optional = true}
non_contiguously_indexed_array = { path = "../" }

[features]
default = ["log"]
log = ["dep:log", "log/std"]
