[package]
name = "non_contiguously_indexed_array_builder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories = ["data-structures"]

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
log = { version = "0.4", optional = true}
non_contiguously_indexed_array = { workspace = true }

[features]
default = ["log"]
log = ["dep:log", "log/std"]
