[package]
name = "non_contiguously_indexed_array_builder"
version = "0.2.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository = "https://github.com/augenfrosch/non_contiguously_indexed_array"
categories = ["data-structures"]

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
non_contiguously_indexed_array = { workspace = true }
